summit_policy_release_pack/policy/gatekeeper/deny-allow-priv-escalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata: { name: deny-allow-privilege-escalation }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
  parameters: { allowed: false }
