summit_policy_release_pack/policy/gatekeeper/deny-host-namespaces.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata: { name: deny-host-namespaces }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
  parameters: { hostNetwork: false, hostPID: false, hostIPC: false }
