summit_policy_release_pack/policy/gatekeeper/deny-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostPath
metadata: { name: deny-hostpath }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
  parameters: { allowedHostPaths: [] }
