summit_policy_release_pack/policy/gatekeeper/disallow-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerImageTag
metadata: { name: disallow-latest-tag }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
  parameters: { tag: "latest" }
