summit_policy_release_pack/policy/gatekeeper/disallow-privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata: { name: disallow-privileged }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
