summit_policy_release_pack/policy/gatekeeper/drop-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata: { name: drop-all-capabilities }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
  parameters: { requiredDropCapabilities: ["ALL"] }
