summit_policy_release_pack/policy/gatekeeper/require-limits-requests.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata: { name: require-limits }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
  parameters:
    cpu: { required: true }
    memory: { required: true }
