summit_policy_release_pack/policy/gatekeeper/require-readonly-rootfs.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata: { name: require-readonly-rootfs }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
