summit_policy_release_pack/policy/gatekeeper/require-runasnonroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPRunasNonRoot
metadata: { name: require-runasnonroot }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
